--- a/aexis/web/static/index.html
+++ b/aexis/web/static/index.html
@@ -21,7 +21,7 @@
         <header class="flex justify-between items-start pointer-events-auto">
             <div>
                 <h1 class="text-4xl font-bold tracking-tighter text-blue-500 drop-shadow-lg"
-                    style="font-family: 'Courier New', monospace;">AEXIS_VIEWPORT</h1>
+                    style="font-family: 'Courier New', monospace;">AEXIS</h1>
                 <div class="flex items-center space-x-2 mt-1">
                     <div id="connection-status" class="w-3 h-3 rounded-full bg-red-500 animate-pulse"></div>
                     <span class="text-xs text-blue-300 font-mono tracking-widest uppercase">System Link: <span
