refactor: migrate frontend application and visualizer to TypeScript

--- a/aexis/web/static/index.html
+++ b/aexis/web/static/index.html
@@ -143,8 +143,7 @@
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pixi.js/7.3.2/pixi.min.js"></script>
-    <script src="/static/visualizer.js"></script>
-    <script src="/static/app.js"></script>
+    <script type="module" src="/static/dist/app.js"></script>
 </body>
 
 </html>
