--- a/aexis/web/static/index.html
+++ b/aexis/web/static/index.html
@@ -8,6 +8,8 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <link rel="stylesheet" href="/static/style.css">
+    <link rel="shortcut icon" href="/static/favicon.ico" type="image/x-icon">
+<link rel="icon" href="/static/favicon.ico" type="image/x-icon">
 </head>
 
 <body class="bg-gray-900 text-gray-100 overflow-hidden m-0 p-0 w-screen h-screen">
